# local_elt_pipeline

./: .gitignore  README.md  pyproject.toml  run_prefect_flow.py  start_prefect_server.sh
.github/: PULL_REQUEST_TEMPLATE.md
app/: response_predictor.py  streamlit_app.py
duckdb_dbt/: profiles.yml
duckdb_dbt/macros/: generate_schema_name.sql
notebooks/: explore_eda_filter_encoding.ipynb  train_stoptions.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/cfg/: config.py
src/models/: catboost.pkl  options.json  preprocessor.pkl  target_label_encoder.pkl
src/orchestration/: cfpb_flows.py
src/utils/: state.py
tests/: __init__.py  test_cfbp_api_client.py  test_verify_data.py
visivo/: project.visivo.yml
