[project]
name = "local-elt-pipeline"
version = "0.1.0"
description = "Simple local ELT pipeline with dlt, dbt, DuckDB, Prefect, and Evidence"
requires-python = ">=3.9.2"
dependencies = [
    "dlt[duckdb]>=1.17.0",
    "prefect>=2.14.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]

