[project]
name = "local-elt-pipeline"
version = "0.1.0"
description = "Local-first ELT pipeline for CFPB consumer complaints: extract with dlt, transform with dbt, analyze with DuckDB, orchestrate with Prefect, and visualize with Visivo—all running locally with zero cloud dependencies"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dlt[duckdb]>=1.17.0",
    "prefect>=2.14.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "dbt-duckdb>=1.7.0",
    "visivo>=0.10.0",
    "dbt-colibri>=0.2.7",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "joblib>=1.5.2",
    "catboost>=1.2.8",
    "scikit-learn>=1.7.2",
    "category-encoders>=2.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "jupyterlab>=4.5.0",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

